--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   font-family: 'Poppins', sans-serif;
   
   height: 100%;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   margin: 0 auto;
   padding: 0;
   color: #333;
@@ -12,7 +12,7 @@ body {
     max-width: 1140px;
       
   height: 100%;
-  border: 1px solid red;
+  /* border: 1px solid red; */
   margin: 0 auto;
   padding: 0;
   color: #333;
@@ -70,7 +70,7 @@ nav .linkss{
 
 .fresh-section{
     margin-top: 130px;
-    border: 2px dotted blue;
+    /* border: 2px dotted blue; */
     display: flex;
     align-items: center;
     font-size: 1.2em;
@@ -277,7 +277,7 @@ button:hover{
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.4); /* darkness and opacity */
+    background: rgba(0, 0, 0, 0.4); 
     z-index: 1;
 }
 
