--- a/style.css
+++ b/style.css
@@ -19,7 +19,11 @@ body {
   background-color: #f9f9f9;
 }
 
+header{
+    padding-top: 20px;
+}
 nav{
+    
     align-items: center;
     display: flex;
     justify-content: space-between;
@@ -57,6 +61,8 @@ nav .linkss{
     nav{
         padding-top: 20px;
         padding-left: 20px;
+        padding-left: 30px;
+        padding-right: 30px;
     } 
     .logo img{
         width: 75px;
@@ -99,6 +105,7 @@ p{
     }
     .fresh-section{
         flex-direction: column-reverse;
+        
     }
     
     .fresh-section h1{
@@ -108,13 +115,17 @@ p{
         font-size: 17px;
     }
     .fresh-text{
-        padding: 20px;
+        padding: 30px;
     }
 }
 /* ................................................................. */
 .card-section{
     margin-top: 110px;
 }
+.card-section p{
+    padding-bottom: 35px;
+}
+
 .card-section h2{
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 50px;
@@ -155,12 +166,16 @@ button:hover{
     }
     .card-container{
         grid-template-columns: repeat(2, 1fr);
-        padding: 20px;
+        padding: 30px;
     }
 
     .card-section h2{
         font-size: 34px;
-    }   
+    }  
+    
+    .card-text{
+        padding: 30px;
+    }
 }
 /* ....................................................................... */
 .badge-section{
@@ -217,7 +232,7 @@ button:hover{
     }
 
     .badge-section{
-        padding: 20px;
+        padding: 30px;
     }
     .badge-section img {
         width: 100%;
@@ -239,6 +254,8 @@ button:hover{
 } */
 
 .container {
+    padding-left: 50px;
+    
     padding-top: 150px;
     margin-bottom: 90px;
     display: flex;
@@ -256,7 +273,7 @@ button:hover{
     position: relative;
     border-radius: 20px;
     overflow: hidden;
-    width: 390px;
+    width: 300px;
     height: 200px;
 }
 
@@ -339,7 +356,7 @@ button:hover{
     }
     .container{
         flex-direction: column;
-        /* padding: 20px 0px; */
+        padding: 30px 0px;
         align-items: center;
     }
     .large-box .text-overlay2 {
@@ -418,7 +435,7 @@ button:hover{
 
 }
 
-/* .................................. */
+/* ............................................................................................ */
 
 .foot-container{
     /* border: 3px dotted blueviolet; */
@@ -467,7 +484,7 @@ button:hover{
         flex-direction: column;
         justify-content: center;
         justify-items: center;
-        padding: 20px;
+        padding: 30px;
         align-items: flex-start;
     }
     
